# SpaceGame

./: CMakeLists.txt  README.md
cmake/: FindSDL2_image.cmake  FindSDL2_mixer.cmake
src/: .player.c.swp  .player.h.swp  CMakeLists.txt  asteroid.c  asteroid.h  audioqueue.c  constants.h  game.c  game.h  main.c  player.c  player.h  timer.c  timer.h
